# canlib-rs

./: ARCHITECTURE.md  Cargo.toml  README.md  USER_GUIDE.md
canlib/: Cargo.toml
canlib-sys/: Cargo.toml  build.rs  wrapper.h
canlib-sys/src/: lib.rs
canlib/examples/: can_fd_channel_setup.rs  canfd.rs  list_channels.rs  send_receive.rs  state_machine.rs  virtual_loopback.rs
canlib/src/: bus_params.rs  channel.rs  embedded_hal.rs  error.rs  lib.rs  message.rs  status.rs
docs/: plan-bindgen-validation.md
